--- a/web/protegido/salidaArticulos.xhtml
+++ b/web/protegido/salidaArticulos.xhtml
@@ -71,7 +71,7 @@
                     <p/>
                     <p/>
                         <p:commandButton value="Registrar Salida" icon="ui-icon-check" actionListener="#{salidaBean.guardaSalidaFactura()}" update="growl" />
-                        
+                        <h:commandButton value="Vale Salida" actionListener="#{articulosExportBean.generarValeSalida}" image="/resources/imagenes/valeEntrada.png" />
                     </p:fieldset>
                 </h:form>
                 
